# nvim_test

./: CMakeLists.txt  main.cpp  mingw_debug.bat  mingw_debug.sh
.cache/clangd/index/: main.cpp.CE1120077F386B30.idx
